# mafia-core

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
arma/@mafia/: basic.cfg  mafia.json  server.cfg  ssh_dsa  ssh_rsa
arma/@mafia/addons/mafia_core/: $PREFIX$  boot.sqf  config.cpp  event.sqf  initFunctionsWrapper.sqf  initFunctionsWrapperx.sqf  lib.sqf  post_init.sqf  signal.sqf
arma/@mafia/modules/test/: main.js  meta.json
arma/MPMissions/mafia.VR/: description.ext  mission.sqm
src/: allocator_info.h  arguments.cpp  arguments.h  asynchronous_executor.cpp  asynchronous_executor.h  containers.cpp  containers.h  controller.cpp  controller.h  dll_handle.cpp  dll_handle.h  dll_handle.tcc  dummy_host.cpp  invoker.cpp  invoker.h  loader.cpp  loader.h  logging.cpp  logging.h  logging_private.h  mafia.cpp  mafia.h  mafia.natvis  mafia_private.h  main.cpp  memory_utility.cpp  memory_utility.h  mission_events.cpp  mission_events.h  module.cpp  module.h  non_copyable.h  pair_hash.h  ref.cpp  ref.h  ref_count.cpp  ref_count.h  runtime.cpp  runtime.h  rv_controller.cpp  (+24 more)
src/containers/: auto_array.cpp  auto_array.h  compact_array.cpp  compact_array.h  find_key_array.cpp  find_key_array.h  map_string_to_class.cpp  map_string_to_class.h  reference_array.cpp  reference_array.h  rv_array.cpp  rv_array.h  stack_array.cpp  stack_array.h
src/game_types/: debug_value.cpp  debug_value.h  defs.cpp  defs.h  game_data.cpp  game_data.h  game_data_type.cpp  game_data_type.h  game_instruction.cpp  game_instruction.h  game_state.cpp  game_state.h  game_type.h  game_value.cpp  game_value.h  game_value_impl.h  game_var_space.cpp  game_var_space.h  game_variable.cpp  game_variable.h  internal_object.cpp  internal_object.h  param_archive.cpp  param_archive.h  ref.h  ref_count.h  rv_allocator.cpp  rv_allocator.h  rv_allocator_local.cpp  rv_allocator_local.h  rv_pool_allocator.cpp  rv_pool_allocator.h  rv_string.cpp  rv_string.h  script_type_info.cpp  script_type_info.h  serialization.cpp  serialization.h  source_doc.cpp  source_doc.h  (+5 more)
src/game_types/game_data/: String.cpp  String.h  all.h  array.cpp  array.h  bool.cpp  bool.h  code.cpp  code.h  config.cpp  config.h  control.cpp  control.h  display.cpp  display.h  group.cpp  group.h  location.cpp  location.h  namespace.cpp  namespace.h  nothing.cpp  nothing.h  number.cpp  number.h  object.cpp  object.h  rv_text.cpp  rv_text.h  script.cpp  script.h  side.cpp  side.h  string.cpp  string.h  team_member.cpp  team_member.h
src/runtime/: README.md  errors.h  invoker_functions.cpp  invoker_functions.h  mafia.h  mafia_errors.h  mafia_module.h  mafia_runtime.h  module.cpp  module.h  module_info.cpp  module_info.h  runtime.cpp  runtime.h
src/runtime/grpc/: grpc_runtime.cpp  grpc_runtime.h
src/runtime/javascript/: duktape_globals.h  javascript_runtime.cpp  javascript_runtime.h
src/runtime/javascript/duktape/: duk_config.h  duktape.h
src/ssh/: README.md  command.cpp  command.h  javascript.cpp  javascript.h  module.cpp  module.h  scheduled_command.cpp  scheduled_command.h
tools/: command_ignores.json  command_overrides.json  commands.json  install.cmd  launch.cmd  launch_debug.cmd  test.proto
tools/cache/: sqf_commands_raw.json
tools/cache/commands/: ABS.json  ACCTIME.json  ACOS.json  ACTION.json  ACTIONIDS.json  ACTIONKEYS.json  ACTIONKEYSIMAGES.json  ACTIONKEYSNAMES.json  ACTIONKEYSNAMESARRAY.json  ACTIONNAME.json  ACTIONPARAMS.json  ACTIVATEADDONS.json  ACTIVATEDADDONS.json  ACTIVATEKEY.json  ADD3DENCONNECTION.json  ADD3DENEVENTHANDLER.json  ADD3DENLAYER.json  ADDACTION.json  ADDBACKPACK.json  ADDBACKPACKCARGO.json  ADDBACKPACKCARGOGLOBAL.json  ADDBACKPACKGLOBAL.json  ADDBINOCULARITEM.json  ADDCAMSHAKE.json  ADDCURATORADDONS.json  ADDCURATORCAMERAAREA.json  ADDCURATOREDITABLEOBJECTS.json  ADDCURATOREDITINGAREA.json  ADDCURATORPOINTS.json  ADDEDITOROBJECT.json  ADDEVENTHANDLER.json  ADDFORCE.json  ADDFORCEGENERATORRTD.json  ADDGOGGLES.json  ADDGROUPICON.json  ADDHANDGUNITEM.json  ADDHEADGEAR.json  ADDITEM.json  ADDITEMCARGO.json  ADDITEMCARGOGLOBAL.json  (+2300 more)
tools/cache/functions/: ACTIONIDS.json  ACTIONKEYSNAMES.json  ACTIONKEYSNAMESARRAY.json  ACTIONNAME.json  ACTIVATEDADDONS.json  ACTIVATEKEY.json  ADD3DENEVENTHANDLER.json  ADDACTION.json  ADDBACKPACK.json  ADDBACKPACKGLOBAL.json  ADDCURATORADDONS.json  ADDCURATORCAMERAAREA.json  ADDCURATOREDITABLEOBJECTS.json  ADDEDITOROBJECT.json  ADDEVENTHANDLER.json  ADDFORCE.json  ADDGOGGLES.json  ADDGROUPICON.json  ADDHANDGUNITEM.json  ADDHEADGEAR.json  ADDITEMCARGOGLOBAL.json  ADDITEMTOBACKPACK.json  ADDITEMTOUNIFORM.json  ADDMAGAZINEGLOBAL.json  ADDMAGAZINEPOOL.json  ADDMAGAZINES.json  ADDMENU.json  ADDMUSICEVENTHANDLER.json  ADDPLAYERSCORES.json  ADDRESOURCES.json  ADDTEAMMEMBER.json  ADDTOREMAINSCOLLECTOR.json  ADDTORQUE.json  ADDUNIFORM.json  ADDVEHICLE.json  ADDWEAPON.json  ADDWEAPONCARGOGLOBAL.json  ADDWEAPONPOOL.json  ADDWEAPONTURRET.json  ADDWEAPONWITHATTACHMENTSCARGO.json  (+1138 more)
tools/mafia/: __init__.py  fetch_sqf_functions.py  gen_cpp_proto.py  sqf_utils.py
